--- a/02-Week/secondWeekTest.html
+++ b/02-Week/secondWeekTest.html
@@ -1,29 +1,36 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Final test</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+        <title>Second Week Test</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
-    <body class="p-3">
+    <body>
+        <h1>Second Week Test</h1>    
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-4">                
-                <div class="bg-light p-2">
-                    <div class="w-100 d-flex"><h2 class="bg-info ml-auto text-white border p-3">Tittle 1</h2></div>
-                    <div class="d-block w-100">Aliquam eu ante vitae ante luctus blandit convallis vel orci. Integer vel ante efficitur, aliquam quam sed, condimentum lorem. Donec volutpat felis sem, non vulputate dolor hendrerit eget. Aenean tincidunt vitae urna et lobortis. Duis egestas vestibulum mauris. Quisque ac nulla commodo, eleifend nisl a, tempus felis. Aliquam cursus ac mi eget congue. Donec accumsan sapien a mi facilisis, sed accumsan elit laoreet. Suspendisse nulla libero, ullamcorper a diam quis, vulputate malesuada justo. Curabitur in ligula lorem. Pellentesque ut volutpat odio, quis semper arcu. Integer non hendrerit urna, et vehicula massa. Quisque congue tempus varius. Morbi ac turpis vel quam pretium malesuada. Vivamus euismod, lorem nec vehicula sodales, orci diam hendrerit mauris, vitae rhoncus purus elit ac quam. Pellentesque nec egestas magna, sit amet elementum tellus.</div>                    
-                </div>
+            <div class="col-lg-4 col-md-6">
+                <section>
+                    <h2 class="info">Lorem</h2>
+                    <p>
+                        Aliquam eu ante vitae ante luctus blandit convallis vel orci. Integer vel ante efficitur, aliquam quam sed, condimentum lorem. Donec volutpat felis sem, non vulputate dolor hendrerit eget. Aenean tincidunt vitae urna et lobortis. Duis egestas vestibulum mauris. Quisque ac nulla commodo, eleifend nisl a, tempus felis. Aliquam cursus ac mi eget congue. Donec accumsan sapien a mi facilisis, sed accumsan elit laoreet. Suspendisse nulla libero, ullamcorper a diam quis, vulputate malesuada justo. Curabitur in ligula lorem. Pellentesque ut volutpat odio, quis semper arcu. Integer non hendrerit urna, et vehicula massa. Quisque congue tempus varius. Morbi ac turpis vel quam pretium malesuada. Vivamus euismod, lorem nec vehicula sodales, orci diam hendrerit mauris, vitae rhoncus purus elit ac quam. Pellentesque nec egestas magna, sit amet elementum tellus.
+                    </p>
+                </section>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="bg-light p-2">
-                    <div class="w-100 d-flex"><h2 class="bg-success ml-auto text-white border p-3">Tittle 2</h2></div>
-                    <div class="d-block w-100">Aliquam eu ante vitae ante luctus blandit convallis vel orci. Integer vel ante efficitur, aliquam quam sed, condimentum lorem. Donec volutpat felis sem, non vulputate dolor hendrerit eget. Aenean tincidunt vitae urna et lobortis. Duis egestas vestibulum mauris. Quisque ac nulla commodo, eleifend nisl a, tempus felis. Aliquam cursus ac mi eget congue. Donec accumsan sapien a mi facilisis, sed accumsan elit laoreet. Suspendisse nulla libero, ullamcorper a diam quis, vulputate malesuada justo. Curabitur in ligula lorem. Pellentesque ut volutpat odio, quis semper arcu. Integer non hendrerit urna, et vehicula massa. Quisque congue tempus varius. Morbi ac turpis vel quam pretium malesuada. Vivamus euismod, lorem nec vehicula sodales, orci diam hendrerit mauris, vitae rhoncus purus elit ac quam. Pellentesque nec egestas magna, sit amet elementum tellus.</div>
-                </div>
+            <div class="col-lg-4 col-md-6">
+                <section>
+                    <h2 class="success">Ipsum</h2>
+                    <p>
+                        Aliquam eu ante vitae ante luctus blandit convallis vel orci. Integer vel ante efficitur, aliquam quam sed, condimentum lorem. Donec volutpat felis sem, non vulputate dolor hendrerit eget. Aenean tincidunt vitae urna et lobortis. Duis egestas vestibulum mauris. Quisque ac nulla commodo, eleifend nisl a, tempus felis. Aliquam cursus ac mi eget congue. Donec accumsan sapien a mi facilisis, sed accumsan elit laoreet. Suspendisse nulla libero, ullamcorper a diam quis, vulputate malesuada justo. Curabitur in ligula lorem. Pellentesque ut volutpat odio, quis semper arcu. Integer non hendrerit urna, et vehicula massa. Quisque congue tempus varius. Morbi ac turpis vel quam pretium malesuada. Vivamus euismod, lorem nec vehicula sodales, orci diam hendrerit mauris, vitae rhoncus purus elit ac quam. Pellentesque nec egestas magna, sit amet elementum tellus.
+                    </p>
+                </section>
             </div>
-            <div class="col-12 col-md-12 col-lg-4">
-                <div class="bg-light p-2">
-                    <div class="w-100 d-flex"><h2 class="bg-danger ml-auto text-white border p-3">Title 2</h2></div>
-                    <div class="d-block w-100">Aliquam eu ante vitae ante luctus blandit convallis vel orci. Integer vel ante efficitur, aliquam quam sed, condimentum lorem. Donec volutpat felis sem, non vulputate dolor hendrerit eget. Aenean tincidunt vitae urna et lobortis. Duis egestas vestibulum mauris. Quisque ac nulla commodo, eleifend nisl a, tempus felis. Aliquam cursus ac mi eget congue. Donec accumsan sapien a mi facilisis, sed accumsan elit laoreet. Suspendisse nulla libero, ullamcorper a diam quis, vulputate malesuada justo. Curabitur in ligula lorem. Pellentesque ut volutpat odio, quis semper arcu. Integer non hendrerit urna, et vehicula massa. Quisque congue tempus varius. Morbi ac turpis vel quam pretium malesuada. Vivamus euismod, lorem nec vehicula sodales, orci diam hendrerit mauris, vitae rhoncus purus elit ac quam. Pellentesque nec egestas magna, sit amet elementum tellus.</div>
-                </div>
+            <div class="col-lg-4 col-md-12">
+                <section>
+                    <h2 class="danger">Donec</h2>
+                    <p>
+                        Aliquam eu ante vitae ante luctus blandit convallis vel orci. Integer vel ante efficitur, aliquam quam sed, condimentum lorem. Donec volutpat felis sem, non vulputate dolor hendrerit eget. Aenean tincidunt vitae urna et lobortis. Duis egestas vestibulum mauris. Quisque ac nulla commodo, eleifend nisl a, tempus felis. Aliquam cursus ac mi eget congue. Donec accumsan sapien a mi facilisis, sed accumsan elit laoreet. Suspendisse nulla libero, ullamcorper a diam quis, vulputate malesuada justo. Curabitur in ligula lorem. Pellentesque ut volutpat odio, quis semper arcu. Integer non hendrerit urna, et vehicula massa. Quisque congue tempus varius. Morbi ac turpis vel quam pretium malesuada. Vivamus euismod, lorem nec vehicula sodales, orci diam hendrerit mauris, vitae rhoncus purus elit ac quam. Pellentesque nec egestas magna, sit amet elementum tellus.
+                    </p>
+                </section>
             </div>
-        </div>
+        </div>               
     </body>
 </html>
